# StoreAccount

./: .gitignore  db_storeaccount.sql  pyproject.toml
storeaccount/: main.py
storeaccount/config/: database.py
storeaccount/src/components/: form.py  homeList.py  navbar.py  paginator.py
storeaccount/src/components/form/: home.py
storeaccount/src/components/forms/: diary.py  home.py  update.py
storeaccount/src/components/lists/: diary.py  home.py  monthly.py  year.py
storeaccount/src/components/table/: monthly.py  yearly.py
storeaccount/src/components/tables/: diary.py  home.py  monthly.py  yearly.py
storeaccount/src/utilities/: utilities.py
storeaccount/src/view/: diaryView.py  homeView.py  monthlyView.py  yearView.py  yearlyView.py
tests/: test_database.py
